--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,23 @@
   font-family: 'Kalam', cursive;
 }
 
+html, body{
+  height: 100%;
+}
+
 body {
   background-color: #fdf4ff;
-  height: 100vh;
   background-image: url(./assets/bg.gif);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color:#0f172a;
+  position: relative;
+}
+
+
+@media only screen and (max-width:600px){
+  body {
+    background-position: right;
+  }
 }
